--- a/css/styles.css
+++ b/css/styles.css
@@ -796,3 +796,77 @@ img {
 .modal-icon {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.modal-text {
+    color: var(--text-color);
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
+        /* 150% */
+    letter-spacing: 0.32px;
+    margin-top: 72px;
+    margin-bottom: 16px;
+}
+
+.form-input {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+    border-radius: 4px;
+}
+
+.form-label {
+    display: flex;
+    flex-direction: column;
+    padding: 0 24px;
+    color: var(--lightslate, #8E8F99);
+    font-size: 12px;
+    line-height: 14px;
+    /* 116.667% */
+    letter-spacing: 0.48px;
+}
+
+.form-contact {
+    width: 360px;
+    height: 40px;
+    border-radius: 4px;
+    margin-top: 4px;
+    border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.40));
+}
+
+.form-contact-comment {
+    width: 360px;
+    height: 120px;
+    border-radius: 4px;
+    margin-top: 4px;
+    flex-shrink: 0;
+    border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.40));
+    margin-bottom: 16px;
+}
+
+.form-contact-checkbox {
+    color: var(--lightslate, #8E8F99);
+    font-size: 12px;
+    line-height: 14px;
+    /* 116.667% */
+    letter-spacing: 0.48px;
+    padding: 0 24px;
+}
+
+.form-contact-btn {}
+
+.form-btn {
+    width: 169px;
+    height: 56px;
+    padding: 16px 32px;
+    align-items: flex-start;
+    gap: 10px;
+    margin-left: 119px;
+    margin-top: 24px;
+    color: #ffffff;
+    border-radius: 4px;
+    background: var(--iris, #4D5AE5);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
