--- a/css/styles.css
+++ b/css/styles.css
@@ -579,6 +579,60 @@ img {
     fill:var(--fill-icon);
 }
 
+.footer-form-text {
+    color: var(--white, #FFF);
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+}
+
+.footer-form-form {
+    display: flex;
+}
+
+.footer-form-label {
+    gap: 24px;
+}
+
+.footer-form-input {
+    width: 264px;
+    height: 40px;
+    border: 1px solid #ffffff;
+    background-color: transparent;
+    font-size: 12px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    padding-left: 16px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    color: #ffffff;
+}
+
+.footer-form-input::placeholder {
+    color: #ffffff;
+}
+
+.footer-form-btn {
+    min-width: 165px;
+    height: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    cursor: pointer;
+    border-color: #4D5AE5;   
+    border: none;
+    border-radius: 4px;
+}
+
+.footer-form-btn
+
 /*----------PORTFOLIO ----------*/
 
 .port {}
@@ -762,6 +816,7 @@ img {
     background: #fcfcfc;
     box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 72px 24px;
 }
 
 .type {
@@ -805,7 +860,6 @@ img {
     line-height: 24px;
         /* 150% */
     letter-spacing: 0.32px;
-    margin-top: 72px;
     margin-bottom: 16px;
 }
 
@@ -820,7 +874,6 @@ img {
 .form-label {
     display: flex;
     flex-direction: column;
-    padding: 0 24px;
     color: var(--lightslate, #8E8F99);
     font-size: 12px;
     line-height: 14px;
@@ -852,7 +905,6 @@ img {
     line-height: 14px;
     /* 116.667% */
     letter-spacing: 0.48px;
-    padding: 0 24px;
 }
 
 .form-contact-btn {}
