--- a/css/styles.css
+++ b/css/styles.css
@@ -585,14 +585,16 @@ img {
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    margin-bottom: 16px;
 }
 
 .footer-form-form {
     display: flex;
+    gap: 24px;
 }
 
 .footer-form-label {
-    gap: 24px;
+    
 }
 
 .footer-form-input {
@@ -626,9 +628,13 @@ img {
     letter-spacing: 0.04em;
     color: #ffffff;
     cursor: pointer;
-    border-color: #4D5AE5;   
+    background-color: #4D5AE5;   
     border: none;
     border-radius: 4px;
+}
+
+.footer-form-icon {
+    margin-left: 16px;
 }
 
 .footer-form-btn
