--- a/css/styles.css
+++ b/css/styles.css
@@ -864,34 +864,33 @@ img {
     font-size: 16px;
     font-weight: 500;
     line-height: 24px;
-        /* 150% */
     letter-spacing: 0.32px;
     margin-bottom: 16px;
 }
 
-.form-input {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 8px;
-    border-radius: 4px;
+.form-form {
+    margin-bottom: 8px;
 }
 
 .form-label {
-    display: flex;
-    flex-direction: column;
     color: var(--lightslate, #8E8F99);
     font-size: 12px;
-    line-height: 14px;
-    /* 116.667% */
-    letter-spacing: 0.48px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    display: block;
+    margin-bottom: 4px;
+}
+
+.form-input {
+    position: relative;
+    
 }
 
 .form-contact {
     width: 360px;
     height: 40px;
     border-radius: 4px;
-    margin-top: 4px;
+    
     border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.40));
 }
 
@@ -899,7 +898,6 @@ img {
     width: 360px;
     height: 120px;
     border-radius: 4px;
-    margin-top: 4px;
     flex-shrink: 0;
     border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.40));
     margin-bottom: 16px;
