--- a/css/styles.css
+++ b/css/styles.css
@@ -883,14 +883,24 @@ img {
 
 .form-input {
     position: relative;
-    
+}
+
+.form-icons {
+    position: absolute;
+    left: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input:focus .form-icons {
+    fill: #4D5AE5;
 }
 
 .form-contact {
     width: 360px;
     height: 40px;
     border-radius: 4px;
-    
     border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.40));
 }
 
