--- a/css/styles.css
+++ b/css/styles.css
@@ -902,6 +902,14 @@ img {
     height: 40px;
     border-radius: 4px;
     border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.40));
+    background-color: transparent;
+    padding-left: 38px;
+    outline: transparent;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-contact:focus {
+    border-color: #4D5AE5;
 }
 
 .form-contact-comment {
@@ -911,13 +919,16 @@ img {
     flex-shrink: 0;
     border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.40));
     margin-bottom: 16px;
+    background-color: transparent;
+        padding-left: 38px;
+        outline: transparent;
+        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-contact-checkbox {
     color: var(--lightslate, #8E8F99);
     font-size: 12px;
     line-height: 14px;
-    /* 116.667% */
     letter-spacing: 0.48px;
 }
 
