--- a/css/styles.css
+++ b/css/styles.css
@@ -912,25 +912,27 @@ img {
     border-color: #4D5AE5;
 }
 
+.form-form-comment {
+    margin-bottom: 16px;
+}
+
 .form-contact-comment {
     width: 360px;
     height: 120px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: rgba(46, 47, 66, 0.40);
+    border: 1px solid rgba(46, 47, 66, 0.4);
     border-radius: 4px;
-    flex-shrink: 0;
-    border: 1px solid var(--navyblue-modal, rgba(46, 47, 66, 0.40));
-    margin-bottom: 16px;
     background-color: transparent;
-        padding-left: 38px;
-        outline: transparent;
-        transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 8px 16px;
+    outline: transparent;
+    resize: none;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-contact-checkbox {
-    color: var(--lightslate, #8E8F99);
-    font-size: 12px;
-    line-height: 14px;
-    letter-spacing: 0.48px;
-}
+.form-contact-checkbox {}
 
 .form-contact-btn {}
 
