--- a/css/styles.css
+++ b/css/styles.css
@@ -917,7 +917,7 @@ img {
 }
 
 .form-contact-comment {
-    width: 360px;
+    width: 100%;
     height: 120px;
     font-size: 12px;
     line-height: 1.17;
@@ -928,7 +928,6 @@ img {
     background-color: transparent;
     padding: 8px 16px;
     outline: transparent;
-    resize: none;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
