--- a/css/styles.css
+++ b/css/styles.css
@@ -928,12 +928,20 @@ img {
     background-color: transparent;
     padding: 8px 16px;
     outline: transparent;
+    resize: none;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-contact-checkbox {}
+.form-form-checkbox {
+    margin-bottom: 24px;
+}
 
-.form-contact-btn {}
+.form-contact-checkbox {
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.04em;
+    color: var(--custom-icon);
+}
 
 .form-btn {
     width: 169px;
