--- a/css/styles.css
+++ b/css/styles.css
@@ -936,23 +936,51 @@ img {
     margin-bottom: 24px;
 }
 
-.form-contact-checkbox {
+.form-text-checkbox {
     font-size: 12px;
     line-height: 1.17;
     letter-spacing: 0.04em;
     color: var(--custom-icon);
 }
 
+.form-text-link {
+    color: var(--iris, #4D5AE5);
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 0.04em;
+    text-decoration-line: underline;
+}
+
+.form-checkbox-icon {
+    width: 16px;
+    height: 16px;
+    border: 1px solid rgba(46, 47, 66, 0.4);
+    border-radius: 2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    fill: transparent;
+}
+
 .form-btn {
-    width: 169px;
+    display: block;
+    min-width: 169px;
     height: 56px;
+    font-family: "Roboto", sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    color: #ffffff;
+    cursor: pointer;
+    background-color: #4D5AE5;
+    border: none;
+    border-radius: 4px;
     padding: 16px 32px;
     align-items: flex-start;
     gap: 10px;
     margin-left: 119px;
     margin-top: 24px;
-    color: #ffffff;
-    border-radius: 4px;
-    background: var(--iris, #4D5AE5);
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
