--- a/css/styles.css
+++ b/css/styles.css
@@ -894,11 +894,7 @@ img {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-input:focus {
-    fill: #4D5AE5;
-}
-
-.form-icons:focus {
+.form-input:focus + .form-icons {
     fill: #4D5AE5;
 }
 
@@ -952,7 +948,7 @@ img {
     color: var(--custom-icon);
 }
 
-.form-input-checkbox:checked .form-checkbox-icon {
+.form-input-checkbox:checked + .form-checkbox-icon {
     background-color: var(--cheked);
     border: none;
     fill: var(--fill-icon);
