--- a/css/styles.css
+++ b/css/styles.css
@@ -823,7 +823,7 @@ img {
     background: #fcfcfc;
     box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    padding: 72px 24px;
+    padding: 72px 24px 24px 24px;
 }
 
 .type {
@@ -894,7 +894,7 @@ img {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form-input:focus + .form-icons {
+.form-contact:focus + .form-icons {
     fill: #4D5AE5;
 }
 
@@ -948,7 +948,7 @@ img {
     color: var(--custom-icon);
 }
 
-.form-input-checkbox:checked + .form-checkbox-icon {
+.form-input-checkbox:checked + .form-text-checkbox .form-checkbox-icon {
     background-color: var(--cheked);
     border: none;
     fill: var(--fill-icon);
