--- a/css/styles.css
+++ b/css/styles.css
@@ -127,16 +127,49 @@ img {
     padding-top: 24px;
     padding-bottom: 24px;
     position: relative;
-    color: #404bbf;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-link::after {
+.header-studio:hover::before {
     content: '';
     position: absolute;
     left: 0;
-    bottom: -1px;
+    width: 48px;
     height: 4px;
+    bottom: -1px;
+    background-color: #404bbf;
+    border-radius: 2px;
+}
+
+.header-studio:hover::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    width: 48px;
+    height: 4px;
+    bottom: -1px;
+    background-color: #404bbf;
+    border-radius: 2px;
+}
+
+.header-portfolio:hover::before {
+    content: '';
+    position: absolute;
+    left: 0;
+    width: 66px;
+    height: 4px;
+    bottom: -1px;
+    background-color: #404bbf;
+    border-radius: 2px;
+}
+
+.header-portfolio:hover::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    width: 66px;
+    height: 4px;
+    bottom: -1px;
     background-color: #404bbf;
     border-radius: 2px;
 }
@@ -462,7 +495,7 @@ img {
     justify-content: center;
     color: var(--custom-icon);
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-            color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .customers-icon {
@@ -787,6 +820,7 @@ img {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    color: #434455;
     display: flex;
     flex-direction: column;
     justify-content: center;
